--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-pandas==0.25.1
-numpy==1.16.4
-matplotlib==3.0.2
-urllib3==1.25.6
+aiohttp==3.6.2
+async-timeout==3.0.1
+matplotlib==3.2.1
+numpy==1.18.4
+pandas==1.0.4
+requests==2.23.0
